# hinata-rs

./: Cargo.toml
src/: builder.rs  device.rs  error.rs  lib.rs  pn532.rs
src/utils/: com.rs  spad0.rs
