[package]
name = "hinata"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "A library to communicate with HINATA card reader"
repository = "https://github.com/Project-HINATA/hinata-rs"

[dependencies]
thiserror = "2.0.18"
num-derive = "0.4.2"
num-traits = "0.2.19"
byteorder = "1.5.0"
async-trait = "0.1.89"
hidapi = { git = "https://github.com/nerimoe/hidapi-rs" }
tokio = { version = "1.49.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
] }
